feat: Dockerize the backend, without Qdrant because our implementation doesn't have any fallback in case of errors in it

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,8 @@ uvicorn
 pydantic
 httpx
 numpy
-#qdrant-client==1.4.0
+qdrant-client==1.4.0
 huggingface-hub==0.16.4
 transformers
+groq
 #llama-cpp-python==0.1.77
