fix: add .env to docker-compose to have environment variables properly set; refactor: add volume to connect code without having to rebuild the container on all code changes;

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,5 +17,6 @@ services:
       dockerfile: ./backend/Dockerfile.dev
     ports:
       - "8000:8000"
-    environment:
-      - ENV=development
+    volumes:
+      - ./backend:/code/app/backend
+    env_file: "./backend/.env"
