--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,3 +20,21 @@ services:
     volumes:
       - ./backend:/code/app/backend
     env_file: "./backend/.env"
+
+  ollama:
+    build:
+      context: ./ollama
+      dockerfile: Dockerfile
+    container_name: ollama-server
+    ports:
+      - "11434:11434"
+    environment:
+      - OLLAMA_HOST=0.0.0.0
+    restart: unless-stopped
+    # deploy:
+    #   resources:
+    #     reservations:
+    #       devices:
+    #         - driver: nvidia
+    #           count: 1
+    #           capabilities: [gpu]
